--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,16 @@
-body {
-    color: #999;
+.grid-container {
+	display: grid;
+	grid-template-columns: repeat(4, 50px);
+	grid-template-rows: repeat(4, 50px);
+}
+.grid-item {
+	border: 2px solid black;
+	position: relative;
+	width: 50px;
+	height: 50px;
+}
+.grid-item img {
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
